--- a/HiChongSwift/Wiki.storyboard
+++ b/HiChongSwift/Wiki.storyboard
@@ -27,29 +27,32 @@
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="esc-fW-8eI" id="3ec-n3-mSx">
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="STR-Fi-vkf">
-                                            <rect key="frame" x="72" y="17" width="60" height="65"/>
-                                            <state key="normal" image="WikiMid1">
-                                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                            </state>
-                                        </button>
-                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ear-rH-3z5">
+                                        <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ear-rH-3z5">
                                             <rect key="frame" x="203" y="17" width="60" height="65"/>
                                             <state key="normal" image="WikiMid2">
                                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                             </state>
+                                            <connections>
+                                                <action selector="majorCateButtonPressed:" destination="AUl-OI-QTd" eventType="touchUpInside" id="buu-Zc-hJI"/>
+                                            </connections>
                                         </button>
-                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="81f-82-Ee4">
+                                        <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="81f-82-Ee4">
                                             <rect key="frame" x="335" y="17" width="60" height="65"/>
                                             <state key="normal" image="WikiMid3">
                                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                             </state>
+                                            <connections>
+                                                <action selector="majorCateButtonPressed:" destination="AUl-OI-QTd" eventType="touchUpInside" id="IGS-mc-wYz"/>
+                                            </connections>
                                         </button>
-                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6G0-Ow-8nG">
+                                        <button opaque="NO" tag="4" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6G0-Ow-8nG">
                                             <rect key="frame" x="467" y="17" width="60" height="65"/>
                                             <state key="normal" image="WikiMid4">
                                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                             </state>
+                                            <connections>
+                                                <action selector="majorCateButtonPressed:" destination="AUl-OI-QTd" eventType="touchUpInside" id="Osg-eF-Qao"/>
+                                            </connections>
                                         </button>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hPO-s7-YJt">
                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -81,6 +84,15 @@
                                                 <constraint firstAttribute="height" id="l91-Kt-wHI"/>
                                             </constraints>
                                         </view>
+                                        <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="STR-Fi-vkf">
+                                            <rect key="frame" x="72" y="17" width="60" height="65"/>
+                                            <state key="normal" image="WikiMid1">
+                                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                            </state>
+                                            <connections>
+                                                <action selector="majorCateButtonPressed:" destination="AUl-OI-QTd" eventType="touchUpInside" id="dAA-yu-Bjd"/>
+                                            </connections>
+                                        </button>
                                     </subviews>
                                     <constraints>
                                         <constraint firstItem="81f-82-Ee4" firstAttribute="leading" secondItem="JZx-cH-tLH" secondAttribute="trailing" id="1r2-6D-sHZ"/>
@@ -355,6 +367,98 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="r4z-mz-JQn">
                                 <rect key="frame" x="0.0" y="107" width="600" height="493"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="WikiInfoCellIdentifier" rowHeight="65" id="GPY-Lv-jbi" customClass="WikiInfoCell" customModule="HiChongSwift" customModuleProvider="target">
+                                        <rect key="frame" x="10" y="117" width="600" height="65"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="GPY-Lv-jbi" id="o6d-Aj-dg1">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Raz-05-iEY">
+                                                    <rect key="frame" x="8" y="3" width="60" height="60"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="60" id="4Oa-jV-piL"/>
+                                                        <constraint firstAttribute="width" constant="60" id="hIL-xU-g3U"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ODg-rt-FGn">
+                                                    <rect key="frame" x="76" y="8" width="36" height="17"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eRR-10-oSF">
+                                                    <rect key="frame" x="76" y="40" width="36" height="17"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uvu-y6-NEi">
+                                                    <rect key="frame" x="556" y="8" width="36" height="17"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="36" id="avj-bv-7XI"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="阅读" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="12I-lO-jc6">
+                                                    <rect key="frame" x="520" y="8" width="28" height="17"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ckg-vm-nr5">
+                                                    <rect key="frame" x="556" y="40" width="36" height="17"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="36" id="SNd-tO-Kzr"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="收藏" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yqw-aI-74B">
+                                                    <rect key="frame" x="520" y="40" width="28" height="17"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="12I-lO-jc6" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="ODg-rt-FGn" secondAttribute="trailing" constant="8" id="0x4-bf-UdG"/>
+                                                <constraint firstAttribute="bottom" secondItem="eRR-10-oSF" secondAttribute="bottom" constant="8" id="5CU-sX-WUN"/>
+                                                <constraint firstItem="ODg-rt-FGn" firstAttribute="leading" secondItem="Raz-05-iEY" secondAttribute="trailing" constant="8" id="7Wq-GC-R4b"/>
+                                                <constraint firstItem="ODg-rt-FGn" firstAttribute="top" secondItem="o6d-Aj-dg1" secondAttribute="top" constant="8" id="AuN-AH-Fbv"/>
+                                                <constraint firstItem="uvu-y6-NEi" firstAttribute="leading" secondItem="12I-lO-jc6" secondAttribute="trailing" constant="8" id="BJw-0r-PA7"/>
+                                                <constraint firstItem="Raz-05-iEY" firstAttribute="leading" secondItem="o6d-Aj-dg1" secondAttribute="leading" constant="8" id="ES2-tI-V3e"/>
+                                                <constraint firstAttribute="trailing" secondItem="uvu-y6-NEi" secondAttribute="trailing" constant="8" id="K7o-be-hSb"/>
+                                                <constraint firstAttribute="trailing" secondItem="ckg-vm-nr5" secondAttribute="trailing" constant="8" id="Pqa-fe-FI5"/>
+                                                <constraint firstItem="12I-lO-jc6" firstAttribute="top" secondItem="o6d-Aj-dg1" secondAttribute="top" constant="8" id="QBh-Rg-dkj"/>
+                                                <constraint firstItem="ckg-vm-nr5" firstAttribute="leading" secondItem="yqw-aI-74B" secondAttribute="trailing" constant="8" id="RCB-rv-0ya"/>
+                                                <constraint firstItem="uvu-y6-NEi" firstAttribute="top" secondItem="o6d-Aj-dg1" secondAttribute="top" constant="8" id="U8M-1I-E9c"/>
+                                                <constraint firstItem="eRR-10-oSF" firstAttribute="leading" secondItem="Raz-05-iEY" secondAttribute="trailing" constant="8" id="WbL-rD-7cr"/>
+                                                <constraint firstAttribute="bottom" secondItem="yqw-aI-74B" secondAttribute="bottom" constant="8" id="awC-rk-hjm"/>
+                                                <constraint firstAttribute="centerY" secondItem="Raz-05-iEY" secondAttribute="centerY" id="kGf-Sq-Ghy"/>
+                                                <constraint firstAttribute="bottom" secondItem="ckg-vm-nr5" secondAttribute="bottom" constant="8" id="sgH-kq-Sfl"/>
+                                                <constraint firstItem="yqw-aI-74B" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="eRR-10-oSF" secondAttribute="trailing" constant="8" id="vbb-t9-6b1"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="avatarImageView" destination="Raz-05-iEY" id="2c0-nd-bii"/>
+                                            <outlet property="icyKeywordLabel" destination="eRR-10-oSF" id="bAJ-2m-r5C"/>
+                                            <outlet property="icyTitleLabel" destination="ODg-rt-FGn" id="goa-01-OAa"/>
+                                            <outlet property="numberCollectLabel" destination="ckg-vm-nr5" id="TCl-WH-YxR"/>
+                                            <outlet property="numberReadLabel" destination="uvu-y6-NEi" id="9tV-eF-W2p"/>
+                                            <outlet property="shoucangLabel" destination="yqw-aI-74B" id="YCs-S6-C4r"/>
+                                            <outlet property="yueduLabel" destination="12I-lO-jc6" id="9N5-1t-ck1"/>
+                                            <segue destination="6h5-V0-vSs" kind="show" identifier="showArticle" id="Jzf-jH-GZT"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="UWi-PC-OAF" id="010-an-Yy5"/>
+                                    <outlet property="delegate" destination="UWi-PC-OAF" id="BFF-Ux-o5o"/>
+                                </connections>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -416,7 +520,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CyV-UA-K6H" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2391" y="712"/>
+            <point key="canvasLocation" x="2439" y="731"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="eQD-a6-Ob6">
